plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.google.protobuf' version '0.9.4' // Protobuf 플러그인 추가
}

group = 'com.bit.idol'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2024.0.0")
    set('springCloudAwsVersion', "3.1.0")
    set('grpcVersion', '1.60.0')
    set('protobufVersion', '3.25.1')
    set('grpcSpringBootVersion', '3.1.0.RELEASE')
}

dependencies {
    // Web & WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    
    // Actuator & Prometheus (모니터링)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    
    // WebClient (외부 API 호출용)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Database (MongoDB & Redis)
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // AWS S3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

    // MSA
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    // Feign HttpClient 5 (성능 튜닝)
    implementation 'io.github.openfeign:feign-hc5'

    // gRPC Client & Protobuf
    implementation "net.devh:grpc-client-spring-boot-starter:${grpcSpringBootVersion}"
    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
    implementation "io.grpc:grpc-stub:${grpcVersion}"
    compileOnly "org.apache.tomcat:annotations-api:6.0.53"

    // Circuit Breaker (Resilience4j)
    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'

    // Swagger (API 문서화)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Zipkin & Micrometer
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'

    // Aho-Corasick
    implementation 'com.hankcs:aho-corasick-double-array-trie:1.2.3'

    // Caffeine Cache (Local Cache)
    implementation 'com.github.ben-manes.caffeine:caffeine'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Jackson Afterburner (JSON 성능 튜닝)
    implementation 'com.fasterxml.jackson.module:jackson-module-afterburner'

    // Thumbnailator (이미지 썸네일 생성)
    implementation 'net.coobird:thumbnailator:0.4.20'

    // Commons Text (XSS 방어용) - 추가됨
    implementation 'org.apache.commons:commons-text:1.10.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:${springCloudAwsVersion}"
    }
}

// Protobuf 설정
protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:${protobufVersion}"
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
